--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -125,22 +125,57 @@ header {
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 20px;
+    flex-direction: column;
 }
+
+.createpost-button {
+    width: 3vw !important;
+    height: 3.3vh !important;
+    margin: 8px 16px ;
+    background-image:url('/static/images/enter.svg'), linear-gradient(270.00deg, rgb(54, 255, 110) 0%,rgb(56, 145, 253) 100%)
+                   !important;
+    background-repeat: no-repeat, no-repeat !important;      
+    background-position: center !important;         
+}
+
+.createpost-button:hover {
+    width: 4vw !important ;
+}
+.button-cont {
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-end;
+    display: flex;
+    transition: 1s;
+}
+
 
 .createpost-area {
     border-radius: 6px;
-    min-width: 94.6%;
-    max-width: 94.6%;
+    width: 90vw;
+    max-width: 94.4%;
     min-height: 70%;
     max-height: fit-content;
     background-color: #F2F2F2;
     margin: 8px 16px;
-    color: black;
     padding: 6px;
-    font-size: 16px;
     outline: none;
+
+    font-family: Montserrat;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #292929;
+    transition: 0.2s;
 }
 
+.createpost-area:focus {
+    background-color: rgb(232, 232, 232);
+    max-width: 96.4%;
+}
+
+.hidden {
+    display: none;
+}
 
 
 
@@ -221,17 +256,22 @@ header {
 }
 
 .post-comment {
-    background-color: #3891FDFF;
+    background-color: rgb(48, 133, 230);
     padding: 4px 16px;
     color: white;
     border-radius: 6px;
+    cursor: pointer;
+}
+.post-comment:hover {
+    background-color: rgb(38, 123, 220);
 }
 
 .post-like {
-    background-color: #1fff9d;
+    background-color: rgb(48, 230, 87);
     padding: 4px 16px;
     color: white;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 
@@ -286,13 +326,15 @@ header {
     font-weight: 500;
     color: #292929;
     padding: 6px;
-    transition: 0.3s;
-    cursor: pointer;
+    transition: 0.2s;
 }
 
 .text-input:focus {
-    background-color: rgb(231, 231, 231);
-    cursor: text;
+    background-color: rgb(232, 232, 232);
+    height: 4.1vh;
+    width: 17.2vw;
+    /* box-shadow: inset 0 0 8px 0px #00cafd45; */
+
 }
 
 .log-reg-input {
@@ -316,11 +358,28 @@ header {
     font-weight: 400;
     line-height: 1.2rem;
     letter-spacing: -0.02rem;
-    color: #292929;
-    transition: 0.3s;
+    color: #fff;
+    transition: 0.2s;
 }
 
 .log-reg-button:hover {
-    filter: hue-rotate(65deg);
+    filter: hue-rotate(-15deg);
     color: #fff;
+    width: 14.8vw;
+}
+
+.log-reg-switch {
+    margin-top: 10px;
+    color: #292929;
+    font-family: Montserrat;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    transition: 0.3s;
+
+}
+
+.log-reg-switch:hover {
+    text-decoration: underline !important;
+    color: rgb(0, 143, 159);
 }
