--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <div class="navbar">
     <a href="/" class="logo-w"></a>
     <div class="bar"></div>
-    <div class="nav-profile" style="background: url(/static/images/profile.jpg) #ffffff00 0% / cover no-repeat;"></div>
+    <div class="nav-profile" style="background: url({{ user_avatar }}) #ffffff00 0% / cover no-repeat;"></div>
 </div>
