--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -168,13 +168,56 @@ header {
     transition: 0.2s;
 }
 
-.createpost-area:focus {
+.createpost-area:focus-within {
     background-color: rgb(232, 232, 232);
     max-width: 96.4%;
 }
 
 .hidden {
-    display: none;
+    display: none !important;
+}
+
+.loading {
+    background: linear-gradient(-90deg,#ffffff,#F2F2F2 );
+    border-radius: 6px;
+    animation: loading 1s;
+    animation-iteration-count: infinite;
+    background-size: 400% 400%;
+    width: 100%;
+    height: 20vh;
+
+}
+
+@keyframes loading {
+    0% {
+        background-position: 0% 2%;
+    }
+    25% {
+        /* color: rgb(0, 0, 0); */
+    }
+    50% {
+        background-position: 100% 14.88%;
+        /* width: 90%;
+        height: 110%;
+        font-size: 100px;
+        font-weight: 400;
+        letter-spacing: 70px;
+        color: rgb(0, 0, 0); */
+    }
+
+    75% {
+        /* color: rgb(0, 0, 0); */
+    }
+    100% {
+        background-position: 0% 2%;
+    }
+}
+
+.posts {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 24px;
 }
 
 
@@ -185,8 +228,11 @@ header {
     color: rgb(41, 41, 41);
     background-color: white;
     border-radius: 12px;
+    transition: 0.3s;
 }
 
+
+  
 .post-info {
     display: flex;
     align-items: center;
@@ -225,8 +271,8 @@ header {
 .nickname {
     color: rgb(82, 82, 82);
     font-family: Montserrat;
-    font-size: 1rem;
-    font-weight: 400;
+    font-size: 1.2rem;
+    font-weight: 500;
     text-align: left;
 }
 
@@ -382,4 +428,107 @@ header {
 .log-reg-switch:hover {
     text-decoration: underline !important;
     color: rgb(0, 143, 159);
+}
+
+
+.profile{
+    border-radius: 12px;
+    width: 100%;
+    height: 35vh;
+    border: 4px #ffffff solid;
+    display: flex;
+    align-items: flex-end;
+}
+
+.avatar {
+    width: 8vw;
+    aspect-ratio: 1;
+    
+    border-bottom-left-radius: 8px;
+}
+
+.info-profile {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: flex-start;
+}
+
+.info-profile-text {
+    width: 100%;
+    min-block-size: auto;
+    background: #ffffff;
+    backdrop-filter: blur(8px);
+    border-bottom-right-radius: 2px;
+    padding: 6px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile-name {
+    color: #292929;
+    font-family: Montserrat;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: -0.3px;
+    text-align: left;
+    }
+
+.profile-desc{
+    color: #292929;
+    font-family: Montserrat;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: -0.3px;
+    text-align: left;
+}
+
+.profile-name-desc {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;
+    justify-content: center;
+    gap:8px;
+}
+
+.profile-buttons {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 11vw;
+}
+
+.profile-button {
+    width: 10vw;
+    height: 4vh;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.profile-button:hover {
+    width: 11vw;
+}
+
+.nosubbed {
+    color: #292929 !important;
+    background: #F2F2F2;
+}
+
+.nosubbed:hover {
+    background: #e2e2e2;
+}
+
+.subs {
+    font-weight: 400;
 }
