--- a/templates/index.html
+++ b/templates/index.html
@@ -97,9 +97,9 @@
                         });
                     });
             }
-
+            loadNewPosts();
             // Загрузка новых постов каждые 5 секунд
-            setInterval(loadNewPosts, 1000);
+            setInterval(loadNewPosts, 10000);
         });
     </script>
     
