--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,8 +22,8 @@
                     </div>
                     <div class="profile-buttons">
                         <p href="" class="subs">{{ user.followers_count }} подписчиков</p>
-                        <button type="button" class="nosubbed log-reg-button profile-button hidden">Подписаться</button>
-                        <a href="#" class="nosubbed log-reg-button profile-button">Редактировать</a>
+                        <!-- <button type="button" class="nosubbed log-reg-button profile-button hidden">Подписаться</button> -->
+                        <a href="/editor" class="nosubbed log-reg-button profile-button">Редактировать</a>
                     </div>
                 </div>
             </div>
